# agentloops

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INVESTOR_MEMO.md  LICENSE  README.md  SHOW_HN.md  demo.py  demo.tape  pyproject.toml  smithery.yaml
.github/workflows/: publish.yml
agentloops/: __init__.py  collective.py  convention_store.py  core.py  forgetter.py  llm.py  meta_learner.py  models.py  outcomes.py  quality_gate.py  reflector.py  rule_engine.py  rule_renderer.py  seed_rules.py  tracker.py
agentloops/adapters/: __init__.py  crewai.py  langchain.py
agentloops/storage/: __init__.py  base.py  file.py  supabase.py
agentloops_mcp/: __init__.py  __main__.py  server.py
docs/: agent-types.md  api-reference.md  architecture.md  concepts.md  integrations.md  mcp-eval.md  mcp.md  quickstart.md  verticals.md
examples/: README.md
examples/coding_agent/: main.py
examples/compliance_agent/: main.py
examples/content_agent/: main.py
examples/devops_agent/: main.py
examples/ecommerce_agent/: main.py
examples/insurance_agent/: main.py
examples/legal_agent/: main.py
examples/quickstart/: main.py
examples/recruiting_agent/: main.py
examples/sales_agent/: main.py  seed_rules.py
examples/support_agent/: main.py
npm-package/: README.md  package.json
site/: index.html
tests/: conftest.py  test_adapters.py  test_convention_store.py  test_core.py  test_forgetter.py  test_mcp.py  test_meta_learner.py  test_outcomes.py  test_quality_gate.py  test_rule_engine.py  test_seed_rules.py  test_storage.py  test_supabase_storage.py  test_tracker.py
